[workspace]

members = [
  "crates/*",
  "examples/*",
]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

# [[example]]
# name = "bevy_pixel_cam_demo"
# path = "examples/bevy_pixel_cam_demo/src/main.rs"