[package]
name = "planiscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31"
fidget = { path = "../../../fidget/fidget" }
spatialtree = "0.1.1"
bevy_render = "0.10.1"
rayon = "1.7.0"
