[package]
name = "planiscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.11"
fidget = { path = "../../../fidget/fidget", default-features = false, features = ["rhai", "render", "mesh"] }
fixed = "1.23.1"
# spatialtree = "0.1.1"
# bevy_render = "0.10.1"
# glam = "0.24.0"
