[package]
name = "planiscope"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.9.3"
fidget = { path = "../../../fidget/fidget", default-features = false, features = ["render", "mesh"] }
# dyn-clone = "1.0.11"
# fixed = "1.23.1"
glam = "0.24.0"
# spatialtree = "0.1.1"
bevy_render = "0.10.1"
colorsys = "0.6.7"
rhai = { version = "1.15.1", features = ["f32_float"] }
