[package]
name = "pls_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = true, features = [ "bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "x11", "dynamic_linking" ] }
bevy_egui = "0.20.3"
futures-lite = "1.13.0"
planiscope = { path = "../planiscope" }
fidget = { path = "../../../fidget/fidget", default-features = false }
