[package]
name = "pls_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [ "bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_pbr", "bevy_gizmos", "dynamic_linking" ] }
bevy_egui = "0.21"
futures-lite = "1.13.0"
planiscope = { path = "../planiscope" }
fidget = { path = "../../../fidget/fidget", default-features = false }
anyhow = "1.0.71"
# bevy_panorbit_camera = { version = "0.5.2", features = [] }
