[package]
name = "bevy_pixel_cam_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default_features = false, features = [ "bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "x11", "dynamic_linking" ] }
bevy_pixel_cam = { path = "../../crates/bevy_pixel_cam" }
